Semi-working form. Receives input and partially parses into CSV file.

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,19 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Jeremy's CSV</title>
+  </head>
 
+  <body>
+    <h3> Jeremy's CSV Report Generator</h3>
+    <form action="http://127.0.0.1:3000/generate" method="POST">
+      <label for="input">Ask, and you shall reCSV:</label>
+      <br><br>
+      <textarea id="input" name="input" cols="100" rows="10" placeholder="Paste your JSON string here."></textarea>
+      <br>
+      <input type="submit" value="Convert to CSV">
+    </form>
+
+  </body>
+</html>
 
