Starting file upload functionality. Taking a lunch break.

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -13,6 +13,11 @@
       <br>
       <input type="submit" value="Convert to CSV">
     </form>
+    <br>
+    <form>
+      <label for="file">Or upload a JSON file:</label>
+
+    </form>
 
   </body>
 </html>
