FULL BASIC FUNCTIONALITY

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -7,6 +7,8 @@
 
   <body>
     <h3> Jeremy's CSV Report Generator</h3>
+    <p><em>"Ask, and you shall reCSV."</em></p>
+    <br><br>
     <!-- <form id="form1" action="/">
       <label for="input">Ask, and you shall reCSV.</label>
       <br><br>
