--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <title>Connect Four</title>
   </head>
   <body>
-    <div id='app'>Knock knock.</div>
+    <div id='app'></div>
   </body>
 
   <script src='bundle.js'></script>
