--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Connect Four</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id='app'></div>
