Webpack and Babel are set up!

--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,2 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
 
+  </head>
+  <body>
+    <div id='app'>Knock knock.</div>
+  </body>
+
+  <script src='bundle.js'></script>
+</html>
 
